...
        android:layout_width="match_parent"
        android:background="@color/black700"
        android:padding="16dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_vertical"
            android:lines="1"
            android:drawablePadding="8dp"
...
